宋嘉玮作业

--- a/bulid/index.html
+++ b/bulid/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
@@ -37,82 +37,82 @@
                                 <dd>美食</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_209.png" alt=""></dt>
+                                <dt><img src="images/1_20 (9).png" alt=""></dt>
                                 <dd>猫眼电影</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_2010.png" alt=""></dt>
+                                <dt><img src="images/1_20 (10).png" alt=""></dt>
                                 <dd>酒店</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_2011.png" alt=""></dt>
+                                <dt><img src="images/1_20 (11).png" alt=""></dt>
                                 <dd>休闲娱乐</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_2012.png" alt=""></dt>
+                                <dt><img src="images/1_20 (12).png" alt=""></dt>
                                 <dd>外卖</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_202.png" alt=""></dt>
+                                <dt><img src="images/1_20 (1).png" alt=""></dt>
                                 <dd>KTV</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_203.png" alt=""></dt>
+                                <dt><img src="images/1_20 (2).png" alt=""></dt>
                                 <dd>周边游</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_204.png" alt=""></dt>
+                                <dt><img src="images/1_20 (3).png" alt=""></dt>
                                 <dd>丽人</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_205.png" alt=""></dt>
+                                <dt><img src="images/1_20 (4).png" alt=""></dt>
                                 <dd>小吃快餐</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_206.png" alt=""></dt>
+                                <dt><img src="images/1_20 (5).png" alt=""></dt>
                                 <dd>火车票</dd>
                             </dl>
 
                         </div>
                         <div class="swiper-slide">
                             <dl>
-                                <dt><img src="images/1_201.png" alt=""></dt>
+                                <dt><img src="images/1_20 (8).png" alt=""></dt>
                                 <dd>美食</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_209.png" alt=""></dt>
+                                <dt><img src="images/1_20 (9).png" alt=""></dt>
                                 <dd>猫眼电影</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_2010.png" alt=""></dt>
+                                <dt><img src="images/1_20 (10).png" alt=""></dt>
                                 <dd>酒店</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_2011.png" alt=""></dt>
+                                <dt><img src="images/1_20 (11).png" alt=""></dt>
                                 <dd>休闲娱乐</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_2012.png" alt=""></dt>
+                                <dt><img src="images/1_20 (12).png" alt=""></dt>
                                 <dd>外卖</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_202.png" alt=""></dt>
+                                <dt><img src="images/1_20 (1).png" alt=""></dt>
                                 <dd>KTV</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_203.png" alt=""></dt>
+                                <dt><img src="images/1_20 (2).png" alt=""></dt>
                                 <dd>周边游</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_204.png" alt=""></dt>
+                                <dt><img src="images/1_20 (3).png" alt=""></dt>
                                 <dd>丽人</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_205.png" alt=""></dt>
+                                <dt><img src="images/1_20 (4).png" alt=""></dt>
                                 <dd>小吃快餐</dd>
                             </dl>
                             <dl>
-                                <dt><img src="images/1_206.png" alt=""></dt>
+                                <dt><img src="images/1_20 (5).png" alt=""></dt>
                                 <dd>火车票</dd>
                             </dl>
 
@@ -122,9 +122,9 @@
                 </div>
                 <div class="list">
                     <h1>猜你喜欢</h1>
-                    <ul class="listUl" id="listUl">
-                        <!-- <li>
-                            <img src="images/list.png" alt="">
+                    <ul class="listUl">
+                        <li>
+                            <img src="images/1_20 (6).png" alt="">
                             <div class="box">
                                 <div class="topList">
                                     <h1>华莱士</h1>
@@ -135,7 +135,59 @@
                                     <s>已售4321</s>
                                 </div>
                             </div>
-                        </li> -->
+                        </li>
+                        <li>
+                            <img src="images/1_20 (6).png" alt="">
+                            <div class="box">
+                                <div class="topList">
+                                    <h1>华莱士</h1>
+                                    <p>[15点通用]鸡腿堡+薯条+中杯可乐1分</p>
+                                </div>
+                                <div class="bottList">
+                                    <p><span>13<em>元</em></span>门市价:31元</p>
+                                    <s>已售4321</s>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/1_20 (6).png" alt="">
+                            <div class="box">
+                                <div class="topList">
+                                    <h1>华莱士</h1>
+                                    <p>[15点通用]鸡腿堡+薯条+中杯可乐1分</p>
+                                </div>
+                                <div class="bottList">
+                                    <p><span>13<em>元</em></span>门市价:31元</p>
+                                    <s>已售4321</s>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/1_20 (6).png" alt="">
+                            <div class="box">
+                                <div class="topList">
+                                    <h1>华莱士</h1>
+                                    <p>[15点通用]鸡腿堡+薯条+中杯可乐1分</p>
+                                </div>
+                                <div class="bottList">
+                                    <p><span>13<em>元</em></span>门市价:31元</p>
+                                    <s>已售4321</s>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/1_20 (6).png" alt="">
+                            <div class="box">
+                                <div class="topList">
+                                    <h1>华莱士</h1>
+                                    <p>[15点通用]鸡腿堡+薯条+中杯可乐1分</p>
+                                </div>
+                                <div class="bottList">
+                                    <p><span>13<em>元</em></span>门市价:31元</p>
+                                    <s>已售4321</s>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -159,38 +211,6 @@
         var bscroll = new BScroll('section', {
             scrollY: true
         })
-
-
-        var xml = new XMLHttpRequest();
-        xml.open('GET', '/api/getData', true);
-        xml.send();
-        xml.onreadystatechange = () => {
-            if (xml.readyState === 4) {
-                if (xml.status == 200) {
-                    render(JSON.parse(xml.responseText).data)
-                }
-            }
-        };
-
-        function render(data) {
-            var html = '';
-            data.forEach(function(item) {
-                html += `<li>
-                            <img src="${item.img}" alt="">
-                            <div class="box">
-                                <div class="topList">
-                                    <h1>${item.title}</h1>
-                                    <p>${item.p}</p>
-                                </div>
-                                <div class="bottList">
-                                    <p><span>${item.span}<em>${item.yuan}</em></span>${item.ps}</p>
-                                    <s>${item.shou}</s>
-                                </div>
-                            </div>
-                        </li>`
-            })
-            document.querySelector('#listUl').innerHTML = html;
-        }
     </script>
 </body>
 
